new database extension implementation and queries page streaming

--- a/App/config_default.ini
+++ b/App/config_default.ini
@@ -10,9 +10,9 @@ logDirectory	= "~/Var/Logs"
 strictExceptions= E_ERROR,E_RECOVERABLE_ERROR,E_CORE_ERROR,E_USER_ERROR,E_WARNING,E_CORE_WARNING,E_USER_WARNING
 
 [db]
-defaultClass	= \MvcCore\Ext\DbConnection
 driver			= mysql
-host			= localhost
+host			= 127.0.0.1
+port			= 3306
 user			= root
 password		= 
 database		= mysql_global_logs
