--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "project",
 	"description": "MvcCore Example - MariaDB Global Logs Explorer",
 	"keywords": [
-		"mvccore", 
+		"mvccore",
 		"project",
 		"example",
 		"mariadb",
@@ -15,26 +15,24 @@
 		"parser"
 	],
 	"license": ["BSD-3-Clause"],
-	"authors": [
-		{
-			"name": "Tom Flidr",
-			"homepage": "https://github.com/tomFlidr"
-		}
-	],
+	"authors": [{
+		"name": "Tom Flidr",
+		"homepage": "https://github.com/tomFlidr"
+	}],
 	"require": {
 		"php": ">=5.4.0",
-		"mvccore/mvccore": "dev-master",
-		"mvccore/ext-model-db-mysql": "dev-master",
-		"mvccore/ext-form": "dev-master",
-		"mvccore/ext-debug-tracy": "dev-master",
-		"mvccore/ext-debug-tracy-mvccore": "dev-master",
-		"mvccore/ext-debug-tracy-routing": "dev-master",
-		"mvccore/ext-debug-tracy-session": "dev-master",
-		"mvccore/ext-view-helper-assets": "dev-master",
-		"mvccore/ext-view-helper-formatnumber": "dev-master",
-		"mvccore/ext-view-helper-formatdate": "dev-master",
-		"mvccore/ext-view-helper-truncate": "dev-master",
+		"mvccore/mvccore": "^5.0",
+		"mvccore/ext-model-db-mysql": "^5.0",
+		"mvccore/ext-form": "^5.0",
+		"mvccore/ext-debug-tracy": "^5.0",
+		"mvccore/ext-debug-tracy-mvccore": "^5.0",
+		"mvccore/ext-debug-tracy-routing": "^5.0",
+		"mvccore/ext-debug-tracy-session": "^5.0",
+		"mvccore/ext-view-helper-assets": "^5.0",
+		"mvccore/ext-view-helper-formatnumber": "^5.0",
+		"mvccore/ext-view-helper-formatdate": "^5.0",
+		"mvccore/ext-view-helper-truncate": "^5.0",
 		"jdorn/sql-formatter": "1.3.x-dev"
 	},
-	"minimum-stability": "dev"
+	"minimum-stability": "stable"
 }
