--- a/App/config_default.ini
+++ b/App/config_default.ini
@@ -14,7 +14,7 @@ driver			= mysql
 host			= 127.0.0.1
 port			= 3306
 user			= root
-password		= 
+password		= 1234
 database		= mysql_global_logs
 
 [assets]
