--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,11 @@
 		"mvccore/mvccore": "^5.0",
 		"mvccore/ext-model-db-mysql": "^5.0",
 		"mvccore/ext-form": "^5.0",
+		"mvccore/ext-form-field-text": "^5.0",
+		"mvccore/ext-form-field-button": "^5.0",
+		"mvccore/ext-form-field-numeric": "^5.0",
+		"mvccore/ext-form-field-date": "^5.0",
+		"mvccore/ext-form-field-selection": "^5.0",
 		"mvccore/ext-controller-datagrid": "^5.0",
 		"mvccore/ext-debug-tracy": "^5.0",
 		"mvccore/ext-debug-tracy-mvccore": "^5.0",
