--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 	}],
 	"require": {
 		"php": ">=5.4.0",
-		"mvccore/mvccore": "^5.1",
+		"mvccore/mvccore": "^5.1.37",
+		"mvccore/ext-model-db": "^5.1.11",
 		"mvccore/ext-model-db-mysql": "^5.1",
 		"mvccore/ext-form": "^5.1.5",
 		"mvccore/ext-form-field-text": "^5.0",
@@ -29,7 +30,7 @@
 		"mvccore/ext-form-field-numeric": "^5.0",
 		"mvccore/ext-form-field-date": "^5.0",
 		"mvccore/ext-form-field-selection": "^5.0",
-		"mvccore/ext-controller-datagrid": "^5.1.13",
+		"mvccore/ext-controller-datagrid": "^5.1.17",
 		"mvccore/ext-debug-tracy": "^5.0",
 		"mvccore/ext-debug-tracy-mvccore": "^5.0",
 		"mvccore/ext-debug-tracy-routing": "^5.0",
