--- a/.gitignore
+++ b/.gitignore
@@ -57,10 +57,10 @@ Var/Logs/*
 Var/Cli/%SystemDrive%
 vendor/*
 *.lock
-composer-update-dev.cmd
-composer-update.cmd
-composer.dev.json
-composer.dev.lock
+composer-update-dev.*
+composer-update.*
+composer.dev.*
+
 .vs
 *.phpproj
 *.phpproj.user
