--- a/App/config_default.ini
+++ b/App/config_default.ini
@@ -1,5 +1,6 @@
 [environments]
 dev.clients[]	= 127.0.0.1
+dev.servers[]	= mvccore
 
 [app]
 locale			= en_GB.UTF-8@euro
@@ -14,7 +15,7 @@ driver			= mysql
 host			= 127.0.0.1
 port			= 3306
 user			= root
-password		= 1234
+password		= 
 database		= mysql_global_logs
 
 [assets]
