--- a/.gitignore
+++ b/.gitignore
@@ -51,19 +51,22 @@ Temporary Items
 .hgignore
 .hgtags
 
-# Application third party modules contents
-Var/Tmp/*
-Var/Logs/*
-Var/Cli/%SystemDrive%
-vendor/*
-*.lock
-composer-update-dev.*
-composer-update.*
-composer.dev.*
-
+# IDEs
 .vs
 *.phpproj
 *.phpproj.user
+.idea
+*.code-workspace
+
+# Application third party modules
+vendor/*
+composer-update-dev.*
+composer-update.*
+
+# Application tmp dirs
+Var/Tmp/*
+Var/Logs/*
+Var/Cli/*
+www/static/tmp
 Data/*
 mysql_global_logs.ini
-Var/Cli/*
