--- a/composer.json
+++ b/composer.json
@@ -21,31 +21,37 @@
 	}],
 	"require": {
 		"php": ">=5.4.0",
-		"mvccore/mvccore": "^5.2.33",
-		"mvccore/ext-model-db": "^5.2.22",
-		"mvccore/ext-model-db-mysql": "^5.2",
-		"mvccore/ext-form": "^5.2.20",
-		"mvccore/ext-form-field-text": "^5.0",
-		"mvccore/ext-form-field-button": "^5.0",
-		"mvccore/ext-form-field-numeric": "^5.0",
-		"mvccore/ext-form-field-date": "^5.0",
-		"mvccore/ext-form-field-selection": "^5.0",
-		"mvccore/ext-controller-datagrid": "^5.1.17",
-		"mvccore/ext-tool-cli-winfork": "^5.0.0",
-		"mvccore/ext-debug-tracy": "^5.0",
-		"mvccore/ext-debug-tracy-mvccore": "^5.0",
-		"mvccore/ext-debug-tracy-routing": "^5.0",
-		"mvccore/ext-debug-tracy-session": "^5.0",
-		"mvccore/ext-view-helper-assets": "^5.0",
-		"mvccore/ext-view-helper-formatnumber": "^5.0",
-		"mvccore/ext-view-helper-formatdate": "^5.0",
-		"mvccore/ext-view-helper-truncate": "^5.0",
+		"mvccore/mvccore": "^5.3",
+		"mvccore/ext-model-db": "^5.3",
+		"mvccore/ext-model-db-mysql": "^5.3",
+		"mvccore/ext-form": "^5.3",
+		"mvccore/ext-form-field-text": "^5.3",
+		"mvccore/ext-form-field-button": "^5.3",
+		"mvccore/ext-form-field-numeric": "^5.3",
+		"mvccore/ext-form-field-date": "^5.3",
+		"mvccore/ext-form-field-selection": "^5.3",
+		"mvccore/ext-controller-datagrid": "^5.3",
+		"mvccore/ext-tool-cli-winfork": "^5.3",
+		"mvccore/ext-debug-tracy": "^5.3",
+		"mvccore/ext-debug-tracy-mvccore": "^5.3",
+		"mvccore/ext-debug-tracy-routing": "^5.3",
+		"mvccore/ext-debug-tracy-session": "^5.3",
+		"mvccore/ext-view-helper-assets": "^5.3",
+		"mvccore/ext-view-helper-formatnumber": "^5.3",
+		"mvccore/ext-view-helper-formatdate": "^5.3",
+		"mvccore/ext-view-helper-truncate": "^5.3",
 		"jdorn/sql-formatter": "1.3.x-dev"
 	},
-	"minimum-stability": "stable",
+	"minimum-stability": "dev",
 	"config": {
 		"allow-plugins": {
 			"civicrm/composer-compile-plugin": true
+		}
+	},
+	"prefer-stable": true,
+	"autoload": {
+		"psr-4": {
+			"App\\": "App/"
 		}
 	}
 }
